o Allow -create-pdf and friends to appear in middle of AND
o Allow the empty range
o Allow a range specifying some pages which do not exist
o -draw can use JPEG2000s
o New -list-attached-files-json optionally including file data
o List and add descriptions and relationships for attachments
o New operation to remove all metadata
o Process lossless CMYK images

Fixes:

* Sanitizes inputs to prevent command injection attacks
o Fix PMAXX et al. w.r.t -add-rectangle
o Allow Float/Int to appear anywhere in CPDFJSON / bookmark JSON
o Allow -info in the case where objstm reading requires password
o Allow -stdin in -info and in -merge (once)
o Cpdfimages was accidentally creating palettised PNGs
o Page label prefixes now in UTF8 
o Regression where bookmarks were being corrupted

* = Supported by a grant from NLnet

2.8.1 (April 2025)

New features:

* -remove-struct-tree removes whole structure tree
* -mark-as-artifact marks a whole file as an artifact

Extended features:

o -obj JSON output
* -obj/-obj-json can follow a chain from an object number
* -obj/-obj-json can explore through arrays and name/number trees
* -print-dict-entry, -remove-dict-entry and -replace-dict-entry
  can follow a chain from each found dictionary entry
* Much more of the PDF/UA Matterhorn verification suite implemented
* PDF/UA verifier now returns extra information with most failures
* Font lister now returns the font itself
o Allow %objnum in output name for -extract-images
* -show-boxes, -trim-marks, -table-of-contents, -add-text
  -add-rectangle, -impose, -twoup, -twoup-stack now preserve
  PDF/UA and PDF/UA-2 compatibility
* Preserve PDF/UA and PDF/UA-2 when drawing on existing PDF
* Preserve PDF/UA and PDF/UA-2 with -stamp-on and -combine-pages
o Allow -scale-stamp-to-fit for -combine-pages
* Allow -underneath for -combine-pages
* Preserve roundtripping of names destinations / actions
* -preserve-actions allows PDF/UA-2 style roundtripping of
  outlines

Fixes:
