@@ -2,6 +2,7 @@
 %Implement and Document reprocessing of JBIG2000 lossless into JBIG2000 lossy
 %Implement and Document -1bpp-method-force to allow all directions
 %Implement and Document CCITTG4 and Document CCITT in -process-images
+%Document new -rasterize-alpha for rasterization and for -output-image
 
 %\DocumentMetadata{lang=en, pdfversion=2.0, pdfstandard=ua-2, pdfstandard=a-4f, testphase={phase-III, title, table, math, firstaid}}
 \documentclass{book}
