@@ -28,6 +28,7 @@ o New -list-attached-files-json optionally including file data
 o List and add descriptions and relationships for attachments
 o New operation to remove all metadata
 o Process lossless CMYK images
+o Use alpha with PNGs with -rasterize, -output-image, -png and when drawing
 
 Fixes:
 
